<resources>
    <string name="app_name">Books</string>
    <string name="error_data_message">Error Loading data from the Google Books API</string>
    <string name="search">Search</string>
    <string name="no_search_data">Please insert valid search terms</string>

    <string name="hint_title">Insert Title</string>
    <string name="hint_authors">Insert Author(s)</string>
    <string name="hint_publisher">Insert Publisher</string>
    <string name="hint_isbn">Insert ISBN</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="loading">Loading</string>
    <string name="unknown">Unknown</string>
    <string name="detail_description">Description</string>
    <string name="book_cover_image">Book cover image</string>
    <string name="retry">Retry</string>
</resources>
